@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3879: A regression in urllib.getproxies_enviroment was fixed.
+
 Build
 -----
 
